Switched from WebRequest to WebClient and removed in-script authentication, relying on http authentication now, which should be safe
when using https.

--- a/ScreenShotr/ScreenShotr/App.config
+++ b/ScreenShotr/ScreenShotr/App.config
@@ -5,6 +5,7 @@
   </startup>
   <appSettings>
     <add key="uploadUrl" value=""/>
-    <add key="uploadPassword" value=""/>
+    <add key="httpUser" value=""/>
+    <add key="httpPassword" value=""/>
   </appSettings>
 </configuration>
