Added basic proxy support.

--- a/ScreenShotr/ScreenShotr/App.config
+++ b/ScreenShotr/ScreenShotr/App.config
@@ -7,5 +7,6 @@
     <add key="uploadUrl" value=""/>
     <add key="httpUser" value=""/>
     <add key="httpPassword" value=""/>
+    <add key="useProxy" value=""/>
   </appSettings>
 </configuration>
